# Corten-BrowserShell

./: .gitignore  COMPLETION-REPORT-v0.17.0.md  COMPLETION-REPORT-v0.18.0.md  COMPLETION-REPORT-v0.19.0.md  Cargo.toml  ORCHESTRATION-SESSION-SUMMARY.md  PHASE5-RESULT.json  PHASE6-VERIFICATION-COMPLETE.md  PROJECT-COMPLETION-REPORT-PHASE6.md  PROJECT-COMPLETION-REPORT-v0.2.0.md  PROJECT-COMPLETION-REPORT-v0.3.0.md  PROJECT-COMPLETION-REPORT-v0.4.0.md  PROJECT-COMPLETION-REPORT-v0.5.0.md  PROJECT-COMPLETION-REPORT.md  SPECIFICATION-GAP-ANALYSIS.md  browser-shell-specification.md  orchestration-resume-context.json
components/auto_updater/: Cargo.toml
components/auto_updater/src/: lib.rs
components/bookmarks_manager/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/bookmarks_manager/src/: lib.rs  storage.rs
components/bookmarks_manager/tests/: test_lib.rs
components/bookmarks_manager/tests/contracts/: mod.rs  test_contract_compliance.rs
components/browser_shell/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/browser_shell/src/: api.rs  coordinator.rs  lib.rs  state.rs
components/browser_shell/tests/: integration_tests.rs
components/content_area/: Cargo.toml  README.md
components/content_area/src/: lib.rs
components/downloads_manager/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/downloads_manager/src/: lib.rs
components/downloads_manager/tests/: mod.rs  test_contract.rs  test_download_info.rs  test_download_metrics.rs  test_download_status.rs  test_downloads_manager.rs  test_http_downloads.rs
components/extensions/: Cargo.toml  README.md  component.yaml
components/extensions/src/: browser_action.rs  content_script_injector.rs  context_menu.rs  lib.rs  manifest.rs  messaging.rs  permissions.rs  types.rs  webrequest.rs
components/find_in_page/: Cargo.toml
components/find_in_page/src/: lib.rs
components/history/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/history/src/: frecency.rs  lib.rs  storage.rs  types.rs  validation.rs
components/history_manager/: Cargo.toml
components/history_manager/src/: lib.rs
components/message_bus/: .gitignore  CLAUDE.md  Cargo.toml  README.md  component.yaml
components/message_bus/src/: bus.rs  error.rs  lib.rs  priority.rs  queue.rs  registry.rs  router.rs  threading.rs  types.rs  validator.rs
components/message_bus/tests/: tests.rs
components/network_stack/: Cargo.toml
components/network_stack/src/: cache.rs  client.rs  error.rs  interceptor.rs  lib.rs  privacy_interceptor.rs  request.rs  resource_loader.rs  response.rs
components/platform_abstraction/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/platform_abstraction/src/: clipboard.rs  events.rs  handles.rs  lib.rs  notifications.rs  platform_window.rs  traits.rs
components/platform_abstraction/tests/: clipboard_tests.rs  events_tests.rs  integration_test.rs  notifications_tests.rs  platform_window_tests.rs
components/pwa_manager/: Cargo.toml
components/pwa_manager/src/: lib.rs
components/render_engine/: Cargo.toml
components/render_engine/src/: lib.rs
components/security_manager/: Cargo.toml
components/security_manager/src/: ad_blocker.rs  audit_logger.rs  ipc_validator.rs  lib.rs  password_manager.rs  privacy.rs  sandbox_enforcer.rs  url_sanitizer.rs
components/session_manager/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/session_manager/src/: lib.rs  storage.rs  types.rs  validation.rs
components/settings_manager/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/settings_manager/src/: defaults.rs  lib.rs  setting_value.rs  settings_manager.rs
components/settings_manager/tests/: test_contract.rs  test_persistence.rs  test_setting_value.rs  test_settings_manager.rs
components/shared_types/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/shared_types/src/: component.rs  error.rs  errors.rs  ids.rs  keyboard_shortcut.rs  lib.rs  memory_audit.rs  message.rs  performance.rs  storage.rs  tab.rs  window.rs  window_config.rs
components/shared_types/tests/: property_tests.rs  test_lib.rs  unit_tests.rs
components/shell_app/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/shell_app/src/: app.rs  lib.rs  main.rs
components/shell_app/tests/: contract_tests.rs  unit_tests.rs
components/sync_manager/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
components/sync_manager/src/: account.rs  change.rs  conflict.rs  encryption.rs  lib.rs  manager.rs  offline_queue.rs  status.rs  syncable.rs
components/tab_manager/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/tab_manager/src/: lib.rs  manager.rs  navigation.rs  process.rs  process_isolation.rs  session.rs  state.rs
components/tab_manager/tests/: test_lib.rs  unit_tests.rs
components/ui_chrome/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/ui_chrome/src/: crash_recovery.rs  devtools.rs  lib.rs  menu.rs  print.rs  settings_ui.rs  shortcuts.rs  tab_drag_ui.rs  theme.rs
components/ui_chrome/tests/: test_downloads_ui.rs  test_ui_chrome.rs
components/user_data/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/user_data/src/: lib.rs
components/user_data/tests/: complete_integration.rs  settings_tests.rs
components/webview_integration/: Cargo.toml
components/webview_integration/src/: lib.rs
components/window_manager/: CLAUDE.md  Cargo.toml  README.md  component.yaml
components/window_manager/src/: events.rs  lib.rs  manager.rs  pip.rs  tab_drag.rs  window_state.rs
components/window_manager/tests/: tests.rs  window_manager_tests.rs
tests/: Cargo.toml  PHASE5-VERIFICATION-REPORT.md  test_output.txt  test_output_current.txt
tests/e2e/: test_bookmark_workflow.rs  test_browser_startup.rs  test_settings_persistence.rs  test_window_tab_navigation.rs
tests/helpers/: lib.rs
tests/integration/: TEST-RESULTS.md  architecture-map.md  test_browser_shell_bookmarks.rs  test_browser_shell_settings.rs  test_browser_shell_tab_manager.rs  test_browser_shell_window_manager.rs  test_message_bus.rs
(+169 files in other folders)
