[workspace]
resolver = "2"

members = [
    "components/shared_types",
    "components/message_bus",
    "components/platform_abstraction",
    "components/window_manager",
    "components/tab_manager",
    "components/ui_chrome",
    "components/settings_manager",
    "components/downloads_manager",
    "components/bookmarks_manager",
    "components/content_area",
    "components/history_manager",
    "components/find_in_page",
    "components/security_manager",
    "components/webview_integration",
    "components/extensions",
    "components/network_stack",
    "components/browser_shell",
    "components/shell_app",
    "components/auto_updater",
    "components/render_engine",
    "components/sync_manager",
    "tests",
]

[workspace.package]
version = "0.5.0"
edition = "2021"
authors = ["CortenBrowser Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Common types
uuid = { version = "1.6", features = ["v4", "serde"] }
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }

# UI Framework (for ui_chrome)
egui = "0.24"
eframe = "0.24"

# Storage (for settings, bookmarks)
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
criterion = "0.5"
proptest = "1.4"
mockall = "0.12"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.test]
opt-level = 2
