[package]
name = "auto_updater"
version = "0.1.0"
edition = "2021"
description = "Automatic update checking, downloading, and installation for CortenBrowser"
authors = ["CortenBrowser Team"]
license = "MIT"

[dependencies]
shared_types = { path = "../shared_types" }
tokio = { version = "1", features = ["full", "sync", "time", "fs", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = { version = "2.5", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
semver = { version = "1.0", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
ring = "0.17"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
mockall = "0.12"
wiremock = "0.5"
