[package]
name = "bookmarks_manager"
version.workspace = true
edition.workspace = true

[dependencies]
shared_types = { path = "../shared_types" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
directories = "5.0"
chrono = "0.4"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.8"
uuid = { version = "1.0", features = ["v4"] }
