[package]
name = "downloads_manager"
version.workspace = true
edition.workspace = true

[features]
test-mock = []

[dependencies]
shared_types = { path = "../shared_types" }
message_bus = { path = "../message_bus" }
tokio = { version = "1.35", features = ["full"] }
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["stream"] }
dirs = "5.0"
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"

# Enable test-mock feature when running tests
[[test]]
name = "test_download_metrics"
required-features = ["test-mock"]
