[package]
name = "extensions"
version.workspace = true
edition.workspace = true

[dependencies]
shared_types = { path = "../shared_types" }
tokio = { version = "1.35", features = ["sync", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "v5", "serde"] }
url = "2.5"
regex = "1.10"

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }
