[package]
name = "find_in_page"
version.workspace = true
edition.workspace = true

[dependencies]
shared_types = { path = "../shared_types" }
message_bus = { path = "../message_bus" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"
