[package]
name = "history"
version = "0.18.0"
edition = "2021"

[dependencies]
shared_types = { path = "../shared_types" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
