[package]
name = "history_manager"
version.workspace = true
edition.workspace = true

[dependencies]
shared_types = { path = "../shared_types" }
message_bus = { path = "../message_bus" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
directories = "5.0"
url = "2.5"

[dev-dependencies]
tempfile = "3.8"
uuid = { version = "1.0", features = ["v4"] }
