[package]
name = "message_bus"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

# Internal dependencies
shared_types = { path = "../shared_types" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
