[package]
name = "platform_abstraction"
version.workspace = true
edition.workspace = true

[dependencies]
# Shared types from our workspace
shared_types = { path = "../shared_types" }

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Logging
log = "0.4"

# Cross-platform notifications
notify-rust = "4"

# Cross-platform clipboard
arboard = "3"

# Error handling
thiserror = "1.0"

# Platform-specific dependencies (for future full implementation)
[target.'cfg(target_os = "linux")'.dependencies]
# x11rb = { version = "0.13", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
# windows = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
# cocoa = { version = "0.25", optional = true }
# objc = { version = "0.2", optional = true }

[dev-dependencies]
# Test utilities
env_logger = "0.11"

[features]
# Future features for full platform integration
# native-linux = ["x11rb"]
# native-windows = ["windows"]
# native-macos = ["cocoa", "objc"]
default = []
