[package]
name = "render_engine"
version.workspace = true
edition.workspace = true

[dependencies]
shared_types = { path = "../shared_types" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
serde_json = "1.0"
