[package]
name = "security_manager"
version.workspace = true
edition.workspace = true

[dependencies]
shared_types = { path = "../shared_types" }
message_bus = { path = "../message_bus" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
url = "2.5"
regex = "1.10"
# Cryptographic dependencies for password manager
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
