[package]
name = "session_manager"
version = "0.19.0"
edition = "2021"
authors = ["Corten Browser Team"]
description = "Session management, crash recovery, and recently closed tabs tracking"

[dependencies]
# Project components
shared_types = { path = "../shared_types" }
user_data = { path = "../user_data" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "session_manager"
path = "src/lib.rs"
