[package]
name = "settings_manager"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
directories = "5.0"
shared_types = { path = "../shared_types" }

[dev-dependencies]
tempfile = "3.8"
