[package]
name = "shell_app"
version.workspace = true
edition.workspace = true

[dependencies]
# Component dependencies
browser_shell = { path = "../browser_shell" }
ui_chrome = { path = "../ui_chrome" }
shared_types = { path = "../shared_types" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# CLI parsing
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# GUI framework
eframe = "0.29"
egui = "0.29"

# System directories
dirs = "5.0"

[dev-dependencies]
# Testing
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
