[package]
name = "sync_manager"
version.workspace = true
edition.workspace = true
description = "Cross-device sync infrastructure for the CortenBrowser Browser Shell"

[dependencies]
shared_types = { path = "../shared_types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
base64 = "0.21"
ring = "0.17"

[dev-dependencies]
tempfile = "3.8"
