[package]
name = "tab_manager"
version = "0.17.0"
edition = "2021"
authors = ["Corten Browser Team"]
description = "Tab lifecycle, process isolation, navigation history, and tab state management"

[lib]
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Collections for efficient tab storage
hashbrown = "0.14"

# Shared types
shared_types = { path = "../shared_types" }

[dev-dependencies]
# Testing
tokio-test = "0.4"
