[package]
name = "tab_manager"
version.workspace = true
edition.workspace = true

[dependencies]
shared_types = { path = "../shared_types" }
tokio = { version = "1.35", features = ["sync", "macros"] }
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }
