[package]
name = "tab_manager"
version.workspace = true
edition.workspace = true

[dependencies]
shared_types = { path = "../shared_types" }
tokio = { version = "1.35", features = ["sync", "macros", "time", "fs"] }
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }
tempfile = "3.8"
