[package]
name = "ui_chrome"
version.workspace = true
edition.workspace = true

[dependencies]
egui = "0.29"
eframe = "0.29"
shared_types = { path = "../shared_types" }
message_bus = { path = "../message_bus" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
