[package]
name = "user_data"
version = "0.17.0"
edition = "2021"
authors = ["Corten Browser Team"]
description = "Settings persistence, bookmarks management, downloads tracking, and history storage"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Async support
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "1.0"

# Internal dependencies
shared_types = { path = "../shared_types" }

[dev-dependencies]
# Testing utilities
tempfile = "3.8"

[lib]
name = "user_data"
path = "src/lib.rs"
